finish report, need double check

--- a/practical5.Rnw
+++ b/practical5.Rnw
@@ -15,11 +15,11 @@
 \newpage
 \section{Summary}
 
-\section{Indudaction}
-Motor learning and Hand-eye coordination are affected by multiple factors,the United States Nava Postgraduate School invited 108 people to their lab for discovering what affects Motor learning and hand-eye coordination.The experiment used a rotating disk with a 3/4-inch target spot, the subject needs to contact the target spot with a metal wand, and the total contact time during the 15 seconds was recorded, as well as number of trails, shape of tracker,age and sex of subject were recorded. We are interested in investigating the association between contact time with age, sex and shape. In this paper we apply normal linear model on thoes valibles to find a proper model that can explain the relation between each variables with contact time, and how these variables explain the way subjects improve across trials. Before we fit the models, we exploary and analysis data, which helps us to understand the relation between varibles and build the best model. Based AIC(Akaike information criterion) and the information we find in data, we select the best model from all the possible models. Finally we explain what find we in the model, and answer the two question that We give previou, 
+\section{Induction}
+Motor learning and Hand-eye coordination are affected by multiple factors,the United States Nava Postgraduate School invited 108 people to their lab for discovering what affects Motor learning and hand-eye coordination.The experiment used a rotating disk with a 3/4-inch target spot, the subject needs to contact the target spot with a metal wand, and the total contact time during the 15 seconds was recorded, as well as number of trails, shape of tracker,age and sex of subject were recorded. We are interested in investigating the association between contact time with age, sex and shape. In this paper we apply normal linear model on those variables to find a proper model that can explain the relation between each variables with contact time, and how these variables explain the way subjects improve across trials. Before we fit the models, we explore and analysis data, which helps us to understand the relation between variables and build the best model. Based AIC(Akaike information criterion) and the information we find in data, we select the best model from all the possible models. Finally we explain what find we in the model, and answer the two question that We give previous, 
 
 \section{Methods}
-Firstly, Boxplots, histograms and scatter plots are used to give a basic exploration of the contact time with other varibles. Linear models are the model that we used to fit our data, we only consider normal linear models with fixed effects. Forward stepwise based on AIC is used to select the best model based on minimumlizing AIC score, we use this method to aotumativly select proper model for us, but we still need human judgment for the results that stepwise gives us. Boxcox is used to find if the data need transfermation and find a simple transformation that leads to normalityDiagnostic plots are used to check the data follow the assumtions and outliers analysis. T test and F test are used to check the significance of models and parameters in models.
+Firstly, Box plots, histograms and scatter plots are used to give a basic exploration of the contact time with other variables Linear models are the model that we used to fit our data, we only consider normal linear models with fixed effects. Forward stepwise based on AIC is used to select the best model based on minimizing AIC score, we use this method to automatic select proper model for us, but we still need human judgement for the results that stepwise gives us. Boxcox is used to find if the data need transformation and find a simple transformation that leads to normality. Diagnostic plots are used to check the data follow the assumptions and outliers analysis. T test and F test are used to check the significance of models and parameters in models.
 
 \section{Results}
 \subsection{Data exploration}
@@ -46,30 +46,44 @@ Trial1 & 1.00 & 0.91 & 0.90 & 0.89 \\
 \end{tabular}
 \end{table}
 
-By looking at summaries(table 1) and exploratory plots(figure 1), we find the plot between each trials are highly coorlated with each other, we decide to come all trails as one varible by using long form. The long form is one row per observation, rather than one row per 5 observations: the new data frame with columns sex, age, trial and time. The trial variable takes values 1, 2, 3, 4, indicating the trial number. The time gives the time measured in the given trial.
+By looking at summaries(table 1) and exploratory plots(figure 1), we find the plot between each trials are highly correlated with each other, we decide to come all trails as one variable by using long form. The long form is one row per observation, rather than one row per 5 observations: the new data frame with columns sex, age, trial and time. The trial variable takes values 1, 2, 3, 4, indicating the trial number. The time gives the time measured in the given trial.
 
 \begin{figure}[H]
-\centering
-<<echo=FALSE, out.width='4in'>>=
 
-par(mfrow=c(1,2))
+\begin{minipage}[b]{.5\linewidth}
+\centering%
+<<echo=FALSE>>=
 tracking = read.table("P:/R Data/tracklong.txt", header = T)
+
 plot(time[sex == "M"] ~ age[sex == "M"], data = tracking, pch = 16,
      ylab = "Time measured in trial (seconds)", xlab = "Age (years)")
 points(time[sex == "F"] ~ age[sex == "F"], data = tracking, pch = 16, col = 2)
 abline(v = 20, lty = 2)
 legend("topright", col = c(2, 1), pch = 16, legend = c("female", "male"))
-
+@
+\subcaption{Q-Q plot for value of time}
+\end{minipage}
+\hfill%
+\begin{minipage}[b]{.5\linewidth}
+\centering%
+<<echo=FALSE>>=
 plot(time[shape == "Box"] ~ age[shape == "Box"], data = tracking, pch = 16,
      ylab = "Time measured in trial (seconds)", xlab = "Age (years)")
 points(time[shape == "Circle"] ~ age[shape == "Circle"], data = tracking, pch = 16, col = 2)
 abline(v = 20, lty = 2)
-legend("topright", col = c(2, 1), pch = 16, legend = c("Box", "Circle"))
+legend("topright", col = c(2, 1), pch = 16, legend = c("Circle", "Box"))
 @
-  \caption{\textbf{Scattor plot between times and age:} \emph{Left: }{This plot is scattor plot for times and age, we add sex as a factor, which indicate by color, and the vetical line is at age 20. }\emph{Right: }{change the factor to shape.}}
+\subcaption{Q-Q plot for $\sqrt{time}$}
+\end{minipage}
+\caption{Q-Q plot for checking time variable}
 \end{figure}
 
-From figure 2, we can see there is a big gap between age, so we add a vertical line at age 20 on plot, it separates the plot into two parts. If we look at the left part, the contact time increases as age increases. For the right side, the contact time decreases as age decrease. From the left plot, it indicates more male are older than 20, and male's performance has higher variation then female. From the right plot, at same age, Box gives higher performance than cirecle. We will consider age, and shape are potential variables in our model.
+\begin{figure}[H]
+\centering
+  \caption{\textbf{Scatter plot between times and age:} \emph{Left: }{This plot is scatter plot for times and age, we add sex as a factor, which indicate by color, and the vertical line is at age 20. }\emph{Right: }{change the factor to shape.}}
+\end{figure}
+
+From figure 2, we can see there is a big gap between age, so we add a vertical line at age 20 on plot, it separates the plot into two parts. If we look at the left part, the contact time increases as age increases. For the right side, the contact time decreases as age decrease. From the left plot, it indicates more male are older than 20, and male's performance has higher variation then female. From the right plot, at same age, Box gives higher performance than circle We will consider age, and shape are potential variables in our model.
 
 \begin{figure}[H]
 \centering
@@ -79,20 +93,23 @@ boxplot(time ~ trial + sex + shape, data = tracking,
         horizontal = TRUE, xlim = c(0, 17), ylim = c(0, 12), las = 1,
         xlab = "Value of time")
 @
+\end{figure}
 
+\begin{figure}[H]
+\centering
 <<echo=FALSE, out.width='4in'>>=
 par(mfrow=c(2,2))
 boxplot(time ~ trial, data = tracking, ylim = c(0, 12), las = 1,xlab = "Trials", ylab = "Time (seconds)")
 boxplot(time ~ sex, data = tracking, ylim = c(0, 12), las = 1,xlab = "Sex(F: Female, M: Male)",ylab = "Time (seconds)")
 boxplot(time ~ shape, data = tracking, ylim = c(0, 12), las = 1,xlab = "Shape",ylab = "Time (seconds)")
 @
-  \caption{\textbf{Box plot of all categoral varibles respect to time: } \emph{Top:}{ On the y aixs 1,2,3,4 represent the different trials, M, F represent male and female, Box, Circle represent different shapes. For example, the top label on the y aixs, 4.M.Circle, means the contact time for a male who did his fourth trail on a circle shape. }\emph{Middle left:}{ Box plot of Time and Trails. }\emph{Middle right:}{ Box plot of Time and Sex. }\emph{Bottom:}{ Box plot of Shapes.}}
+  \caption{\textbf{Box plot of all categorical variables respect to time: } \emph{Top:}{ On the y aixs 1,2,3,4 represent the different trials, M, F represent male and female, Box, Circle represent different shapes. For example, the top label on the y aixs, 4.M.Circle, means the contact time for a male who did his fourth trail on a circle shape. }\emph{Middle left:}{ Box plot of Time and Trails. }\emph{Middle right:}{ Box plot of Time and Sex. }\emph{Bottom:}{ Box plot of Shapes.}}
 \end{figure}
 
-We first draw the top plot in figure 3, put all categoral varibles together, we can see the mean values and the variances for different groups are different, so some variables affect the time, in order to make the affect easier to see, we draw the categoral varibles with time separatly, which are middle left, middle right and bottom plots in figure 3. From Middle left plot, it gives us an increasing trend across trails, the more trails subjects did, the better result they got. From the middle right, we can see that male has a better results than female, but the male has a high variance compares to female. But from bottom plot, means of two groups dont look significantly different, but affects the variance, we can see the Circle has bigger variance than Box. 
+We first draw the top plot in figure 3, put all categorical variables together, we can see the mean values and the variances for different groups are different, so some variables affect the time, in order to make the affect easier to see, we draw the categorical variables with time separately, which are middle left, middle right and bottom plots in figure 3. From Middle left plot, it gives us an increasing trend across trails, the more trails subjects did, the better result they got. From the middle right, we can see that male has a better results than female, but the male has a high variance compares to female. But from bottom plot, means of two groups don't look significantly different, but affects the variance, we can see the Circle has bigger variance than Box. 
 
 
-\subsection{Modeling data}
+\subsection{Modelling data}
 <<echo=FALSE>>=
 library(MASS)
 model1 = lm(time ~ sex + age + trial, data = tracking)
@@ -102,7 +119,7 @@ model2 = lm(formula = time ~ sex + age + trial + shape + sex:age + age:trial + a
            data = tracking)
 @
 
-Based on what we get from Data exploration part, we decide our inital model to be "time ~ sex + age + trial", and names it as model1. we put it into "stepAIC" function, the stepAIC returns us "time ~ sex + age + trial + shape + age:shape + sex:age + age:trial" as the best model with AIC equal to 492.87. Now we update our model to the model that stepAIC gives us, and names it as model2.
+Based on what we get from Data exploration part, we decide our initial model to be "time ~ sex + age + trial", and names it as model1 we put it into "stepAIC" function, the stepAIC returns us "time ~ sex + age + trial + shape + age:shape + sex:age + age:trial" as the best model with AIC equal to 492.87. Now we update our model to the model that stepAIC gives us, and names it as model2.
 
 <<echo=FALSE>>=
 # summary(model2)
@@ -126,7 +143,7 @@ Based on what we get from Data exploration part, we decide our inital model to b
 \end{tabular}
 \end{table}
 
-R does F-test for the model, the null hypothesis for F-test is the model is not significant, the alternative is the model is significant.R gives p-value of F-test equal to 2.210-16, which is less than 0.01, so the model is significant at 0.01 alpha level. But if we look at the T-test for the parameters, which tests if the parameters are significant, there are three variables(sex, age, trails) are not significant at 0.01 significant level. But only if the model doesn't have interaction parts, the interpretation of the hypothesis test of single  variables do not change, since we have interaction between age and sex, age and tiral, age and shape, so the hypothesis tests for sex, age, and trial might not be useful. So we keep this model as our best model for right now.
+R does F-test for the model, the null hypothesis for F-test is the model is not significant, the alternative is the model is significant.R gives p-value of F-test equal to 2.210-16, which is less than 0.01, so the model is significant at 0.01 alpha level. But if we look at the T-test for the parameters, which tests if the parameters are significant, there are three variables(sex, age, trails) are not significant at 0.01 significant level. But only if the model doesn't have interaction parts, the interpretation of the hypothesis test of single  variables do not change, since we have interaction between age and sex, age and trial, age and shape, so the hypothesis tests for sex, age, and trial might not be useful. So we keep this model as our best model for right now.
 
 \begin{figure}[H]
 \centering
@@ -139,12 +156,12 @@ boxcox(model2,lambda = seq(0, 1, length = 10))
 
 The result from boxcox indicates that the 95\% confident interval for $\lambda$ is around 0.5 to 0.7. we need to transfer the time to the power of the $\lambda$, here we choose $\lambda$ to be 0.5, which is the square root of the time.
 
-We look at the Q-Q plot for time before and after transfermation
+We look at the Q-Q plot for time before and after transformation
 \begin{figure}[H]
 
 \begin{minipage}[b]{.5\linewidth}
 \centering%
-<<>>=
+<<echo=FALSE>>=
 qqnorm(tracking$time)
 lines(x=c(-3,3), y = c(0,12))
 @
@@ -159,7 +176,7 @@ lines(x=c(-3,3), y = c(0,3.5))
 @
 \subcaption{Q-Q plot for $\sqrt{time}$}
 \end{minipage}
-\caption{Q-Q plot for checking time varible}
+\caption{Q-Q plot for checking time variable}
 \end{figure}
 
 In the Q-Q plot, the most of the points are on the gray line. We consider the errors to follow a normal distribution. We can see the right plot has more data on the gray line than left plot, we can see that after the transformation, the time varible is more normal.
@@ -175,7 +192,7 @@ stp = stepAIC(model2,
 model3 = lm(formula = time ~ sex + age + trial + shape + sex:age + age:shape,
            data = new_tracking)
 @
-After we do the boxcox variable transfermation, we refit the data, and do the stepAIC again. This time, the stepAIC gives us"time ~ sex + age + trial + shape + sex:age + age:trial + age:shape + sex:shape" as the best model, so we update our model to this one and names it as model3. 
+After we do the boxcox variable transformation, we refit the data, and do the stepAIC again. This time, the stepAIC gives us"time ~ sex + age + trial + shape + sex:age + age:trial + age:shape + sex:shape" as the best model, so we update our model to this one and names it as model3. 
 
 <<echo=FALSE>>=
 # summary(model3)
@@ -204,15 +221,15 @@ After we do the boxcox variable transfermation, we refit the data, and do the st
 par(mfrow=c(2,2))
 plot(model3)
 @
-  \caption{\textbf{Diagnostic plots: } \emph{Top right:}{ Residual plot. }\emph{Top left: }{ Q-Q plot. }\emph{Bottom left: }{ Standerazie residual plot. }\emph{Bottom right: }{Leverage plot.}}
+  \caption{\textbf{Diagnostic plots: } \emph{Top right:}{ Residual plot. }\emph{Top left: }{ Q-Q plot. }\emph{Bottom left: }{ Standardised residual plot. }\emph{Bottom right: }{Leverage plot.}}
 \end{figure}
 
 The upper left plot shows the residuals versus the fitted values. If the variance is constant for data, all the points fall randomly on the two side of red horizontal line, but here, the more points have positive residuals when fitted values around 1.5 to 2.5, but we don't see any pattern in the plot, so we think data don't valid assumption of equal variance
 The upper right plot is a Q-Qnorm plot of the residuals. This plot evaluates the least-squares regression assumption that the errors are normally distributed. Here, the most of the points are on the gray line. We consider the errors to follow a normal distribution. 
-The lower left plot is a scale-location plot. The regression assumes homoscedasticity, that the variance in the residuals doesn’t change as a function of x. If that assumption is correct, then the red line should be relatively flat, the red line is flat here. This shows that the errors are homoscedasticity.
-The lower right plot shows the standardized residuals against leverage. Leverage is a measure of how much each data point influences the regression. Here, we can see that R automatically marked the outliers, but they are still in the cook's distance, and also look at Q-Q plot, there are no points obviously far away from diagnoal, so we don't treat them as outlier.
+The lower left plot is a scale-location plot. The regression assumes homoscedasticity, that the variance in the residuals doesn't’t change as a function of x. If that assumption is correct, then the red line should be relatively flat, the red line is flat here. This shows that the errors are homoscedasticity.
+The lower right plot shows the standardized residuals against leverage. Leverage is a measure of how much each data point influences the regression. Here, we can see that R automatically marked the outliers, but they are still in the cook's distance, and also look at Q-Q plot, there are no points obviously far away from diagonal, so we don't treat them as outlier.
 
-\subsection{Data transfermation}
+\subsection{Data transformation}
 As we find in Data exploration section, the age data has a gap around age 20, so we split the age into two groups that are greater than 20, and less than 20. We do a box plot to see if this factor will affect the time.
 \begin{figure}[H]
 \centering
@@ -224,7 +241,7 @@ plot(new_tracking$grp,new_tracking$time, ylab = "Time measured in trial (seconds
 @
   \caption{\textbf{Box plot:} {Boxcox plot of subject younger than 20 and others}}
 \end{figure}
-From the box plot, we can see that age group has a significant on time, the old group performes better than the young group. So we will consider to put this varable into our model
+From the box plot, we can see that age group has a significant on time, the old group performs better than the young group. So we will consider to put this variable into our model
 
 
 <<echo=FALSE>>=
@@ -236,7 +253,7 @@ From the box plot, we can see that age group has a significant on time, the old 
 #     age:grp + shape:grp + age:trial, data = new_tracking)
 @
 
-Another variable that we need consider to do transfermation is \textbf{Trails}. The \textbf{Trails} can be treated either as numerical or categrocal, we need to spercify how the different types will affect our model. If we treat \textbf{Trails} as numerical data, then the different trails will be marked as 1,2,3,4. If we fit it into model, we will get $\beta_{trails}\cdot Trails$ term, and \textbf{Trials} can be 1 to 4. That means, if the subject does the experment again, he/she will increase the contant time by $\beta_{trails}$. But we don't think that is true, because the more experment that subject does, the less contant time that subject can improve. We believe if we treat trails as a categoral data is more proper in this case. we make trail as factor and add age factor into data. 
+Another variable that we need consider to do transformation is \textbf{Trails}. The \textbf{Trails} can be treated either as numeric or category, we need to specify how the different types will affect our model. If we treat \textbf{Trails} as numerical data, then the different trails will be marked as 1,2,3,4. If we fit it into model, we will get $\beta_{trails}\cdot Trails$ term, and \textbf{Trials} can be 1 to 4. That means, if the subject does the experiment again, he/she will increase the contant time by $\beta_{trails}$. But we don't think that is true, because the more experiment that subject does, the less contact time that subject can improve. We believe if we treat trails as a categorical data is more proper in this case. we make trail as factor and add age factor into data. 
 
 <<echo=FALSE>>=
 new_tracking$trial = factor(new_tracking$trial)
@@ -247,7 +264,7 @@ stp = stepAIC(model3,
 model5 = lm(formula = time ~ sex + age + trial + shape + grp + sex:age + age:shape +
     age:grp + shape:grp, data = new_tracking)
 @
-we use new data to do StepAIC again, it gives "time ~ sex + age + trial + shape + grp + sex:age + age:shape + age:grp + shape:grp" as best model.
+we use new data to do StepAIC again, it gives "time ~ sex + age + trial + shape + grp + sex:age + age:shape + age:grp + shape:grp" as best model. 
 
 <<echo=FALSE>>=
 # summary(model5)
@@ -275,9 +292,28 @@ we use new data to do StepAIC again, it gives "time ~ sex + age + trial + shape 
    \caption{\textbf{Summary table for model5}}
 \end{tabular}
 \end{table}
+The Table 4 shows us the p-value of all variables are less than 0.05 except intercept, we can say that all the variables are significant at 0.05 significant level. 
+
+\subsection{Interpret model}
+Now we are going through each variable in the model5 to explore the relation between time and those variables. The first term is \textbf{sexM} = -0.1422, which means if the subject is male, he will get 0.1422 $\sqrt{time}$ less than female, but from the box plot of sex respect to time, we see that male overall performances are better than female, so we look our model5 again, we notice there is an interaction term \textbf{sexM:age}, which is 0.0146. It means if the subject is male, the older he is, the better he could do. If we look at the figure 2 left plot, and the subjects under 20 years old, the female has same performance as male, even a little bit better than male. If we combine the \textbf{sexM} and \textbf{sexM:age} together, we will get a conclusion for sex variable, the older male can do better than female. 
+
+The next term is age, from the experience of interpreting sex variable, this time we interpreting terms that involve age, instead of interpreting age term only. In the model we have \textbf{age}=0.1201,\textbf{sexM:age}=0.0146,\textbf{age:shapeCircle}=0.0516,\textbf{age:grpold}=-0.1743. The \textbf{age} term is positive, which means the older people can do better than younger people, if we look at the Figure 2, we can see that is not true, Figure 2 shows after around 40 years old, people start performing worse, but the textbf{age:grpold} is negative, which soluve this problem. The difference between \textbf{sexM:age} and \textbf{age:grpold} is 0.1201-0.1743=-0.0542, it tells us the for the subjects in older group, the order they are, the worst they can do in the experiments. The relation between age and time is the adult can do better than young and old people. For \textbf{sexM:age}, we have already interpreted it, for \textbf{age:shapeCircle}, we will talk about it with \textbf{shapeCircle} later. 
+
+Next we will talk about trail variable, we have \textbf{trial2}=0.1574, \textbf{trial3}=0.2312 and \textbf{trial4}=0.2913. If trail is 1, trail won't contribute anything to contact time, which means the model set trail1 as base line, if the trail is 2, it will increase $\sqrt{time}$ for 0.1574, if the trail is 3, it will increase $\sqrt{time}$ for 0.2312, 0.2913 for trail4. From trail1 to trail2, the $\sqrt{time}$ increases 0.1574, but from trail2 to trail3, the $\sqrt{time}$ increases 0.2312-0.1574=0.0738, which is less than the difference between trail1 and trail2. For trail3 to trail4, the difference is 0.2913-0.2312 = 0.0601, it is also less than the difference between trail2 and trail3. It perfect match what we talked about at section Data transformation, which is "the more experiment that subject does, the less contact time that subject can improve".
+
+The last variable is shape. The \textbf{shapeCircle}=-0.2489, \textbf{age:shapeCircle}=0.0516, and \textbf{shapeCircle:grpold}=-0.9847. From Figure 2 right plot, we can see that subjucts have better performance on Box shape, because the there are more red dots have higher contact time, so it makes sense that \textbf{shapeCircle} is negative, which means circle shape will reduce subject's performance. If we look at the right plot in figure 2 again, subjects under 20 years old, the contact time in circle shape increases as age increases, so we have term \textbf{age:shapeCircle} is positive. But this relation is not hold for subject who is older than 20, the \textbf{shapeCircle:grpold} term capture this situation, \textbf{shapeCircle:grpold} is negative value, it cancels some increasing trend from \textbf{age:shapeCircle} term. we can conclude that for overall, subject performs better on box shape than circle shape.
+
 
 \section{Conclusions}
-Interpret your final normal linear model for contact time, and aim to produce one or two plots which illustrate your findings graphically.nvestigate how contact time depends on Age, Sex and Shape, and how these variables explain the way subjects improve across trials.
+In this report, we first do some numerical summaries and some exploratory plots, which give us a basic idea of the data and the relation between each varibles. We treat the trails as categorical variable and add one variables called "group" which split subject into young and old group by their age, then We use normal linear model to find the relationship between contact time and other variables on the data that collected by United States Naval Postgraduate School. we showed that age, sex, trails and shape all affect the contact time, and how they affect contact time, such as adult can do better than young and old people. The final model we get matches what we find in data exploration section. 
+
 \section{Discussion}
-x2, data split two linear model
+In the future work, instead of adding one more variable to specify young and old people, we can separately do the normal linear regression for young and old people, that may give us a better result. Also from Figure 2, we notice the time and age are not linear related, so we can apply quartic model on this data, such as add $age^2$ term into our model.
+
+\newpage
+\appendix
+\section{Appendix}
+\subsection{R code}
+
+
 \end{document}
